Device Preferences: add checkboxes
Device Preferences: Add one-folder-per-podcast checkbox

Device Preferences: add checkbox for "use absolute paths"

Not sure if this setting applies to ipods

--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -1272,6 +1272,40 @@
                                 <property name="position">13</property>
                               </packing>
                             </child>
+
+                            <child>
+                              <object class="GtkCheckButton" id="checkbutton_one_folder_per_podcast">
+                                <property name="label" translatable="yes">Create separate folders for each podcast</property>
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="receives-default">False</property>
+                                <property name="halign">start</property>
+                                <property name="margin-bottom">4</property>
+                                <property name="draw-indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">14</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkCheckButton" id="checkbutton_playlists_use_absolute_path">
+                                <property name="label" translatable="yes">Use absolute paths in playlists</property>
+                                <property name="visible">True</property>
+                                <property name="can-focus">True</property>
+                                <property name="receives-default">False</property>
+                                <property name="halign">start</property>
+                                <property name="margin-bottom">4</property>
+                                <property name="draw-indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">15</property>
+                              </packing>
+                            </child>
+                            
                           </object>
                           <packing>
                             <property name="name">devices</property>
