--- a/share/gpodder/ui/gtk/gpodderpreferences.ui
+++ b/share/gpodder/ui/gtk/gpodderpreferences.ui
@@ -16,17 +16,17 @@
     <property name="step-increment">1</property>
     <property name="page-increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="adjustment_update_interval">
-    <property name="upper">360</property>
-    <property name="step-increment">1</property>
-    <property name="page-increment">1</property>
-  </object>
   <object class="GtkAdjustment" id="adjustment_max_filename_length">
     <property name="lower">30</property>
     <property name="upper">150</property>
     <property name="value">60</property>
     <property name="step-increment">5</property>
     <property name="page-increment">5</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment_update_interval">
+    <property name="upper">360</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">1</property>
   </object>
   <object class="GtkDialog" id="gPodderPreferences">
     <property name="can-focus">False</property>
@@ -1661,6 +1661,8 @@
                                         <property name="visible">True</property>
                                         <property name="can-focus">True</property>
                                         <property name="hexpand">True</property>
+                                        <property name="visibility">False</property>
+                                        <property name="input-purpose">password</property>
                                         <signal name="changed" handler="on_proxy_password_changed" swapped="no"/>
                                       </object>
                                       <packing>
