--- a/share/gpodder/ui/gtk/gpodderwelcome.ui
+++ b/share/gpodder/ui/gtk/gpodderwelcome.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <!--*- mode: xml -*-->
 <interface>
   <requires lib="gtk+" version="3.16"/>
@@ -113,6 +113,7 @@
                         <property name="margin-top">10</property>
                         <property name="margin-bottom">10</property>
                         <property name="label" translatable="yes">Choose from a list of example podcasts</property>
+                        <property name="wrap">True</property>
                       </object>
                     </child>
                   </object>
@@ -138,6 +139,7 @@
                         <property name="margin-top">10</property>
                         <property name="margin-bottom">10</property>
                         <property name="label" translatable="yes">Add a podcast by entering its URL</property>
+                        <property name="wrap">True</property>
                       </object>
                     </child>
                   </object>
@@ -163,6 +165,7 @@
                         <property name="margin-top">10</property>
                         <property name="margin-bottom">10</property>
                         <property name="label" translatable="yes">Restore my subscriptions from gpodder.net</property>
+                        <property name="wrap">True</property>
                       </object>
                     </child>
                   </object>
